[gd_scene load_steps=2 format=2]

[ext_resource type="Script" path="res://scripts/settings.gd" id=1]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( "1" )

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0.2, 0.2, 0.2, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1

[node name="MusicSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MusicLabel" type="Label" parent="VBoxContainer/MusicSection"]
layout_mode = 2
text = "Music"
horizontal_alignment = 1

[node name="MusicToggle" type="CheckButton" parent="VBoxContainer/MusicSection"]
layout_mode = 2
text = "Enable Music"

[node name="MusicVolume" type="HSlider" parent="VBoxContainer/MusicSection"]
layout_mode = 2
max_value = 1.0
value = 1.0

[node name="SFXSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SFXLabel" type="Label" parent="VBoxContainer/SFXSection"]
layout_mode = 2
text = "Sound Effects"
horizontal_alignment = 1

[node name="SFXToggle" type="CheckButton" parent="VBoxContainer/SFXSection"]
layout_mode = 2
text = "Enable Sound Effects"

[node name="SFXVolume" type="HSlider" parent="VBoxContainer/SFXSection"]
layout_mode = 2
max_value = 1.0
value = 1.0

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back" 